--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name=".view.descriptionscreen.DescriptionActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
